<Fixed width problem on smaller phones for contact form>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@
 
 .form-contact {
     font-family: 'Spartan', sans-serif;
-    width: 500px;
+    max-width: 400px;
     padding: 20px;
     margin-bottom: 20px;
 }
